www/themes/new/css/sidebar.css
#sidebar {
    background: var(--sidebar-background);
    font-family: 'Inter', 'Helvetica', 'Arial', sans-serif;
    position: fixed;
    left: 0;
    top: 0;
    padding: 15px 0 20px 0;
    margin: 0;
    height: 100%;
    width: var(--sidebar-not-collapsed-width);;
    list-style-type: none;
    color: var(--sidebar-secondary-color);
    transition: all .3s;
    z-index: 903;
    display: flex;
    flex-direction: column;
}

#sidebar.collapsed{
    width: var(--sidebar-collapsed-width);
}

#sidebar.collapsed ~ #main{
    padding-left: var(--sidebar-collapsed-width);
}

@media only screen and (max-width: 1000px){
    #sidebar.collapsed ~ #main{
        padding-left: 0;
    }
}

#sidebar.collapsed ~ #main .search-wrapper{
    padding-left: 50px;
}

#sidebar.collapsed ~ #main #xentral-licence-alert ~ #header .search-wrapper{
    padding-left: 16px;
}

#sidebar .sidebar-toggle{
    position: absolute;
    left: 160px;
    top: 23px;
    z-index: 904;
    cursor: pointer;
    transition: all .3s;
}

#sidebar .sidebar-toggle #sidebar-toogle-arrow{
    position: absolute;
    left: 0;
    top: 0;
    transform: rotate(180deg);
}

#sidebar.collapsed .sidebar-toggle{
    left: 90px;
}

#sidebar.collapsed .sidebar-toggle #sidebar-toogle-arrow{
    transform: rotate(0deg);
}

#sidebar .logo-index{
    display: block;
    width: 150px;
    overflow: hidden;
    transition: all .3s;
    padding-left: 25px;
}

#sidebar .logo-index .sidebar_icon_logo{
    display: none;
}

#sidebar.collapsed .logo-index{
    width: 55px;
    text-align: left;
}

#sidebar.collapsed .logo-index .sidebar_logo {
    display: none;
}

#sidebar.collapsed .logo-index .sidebar_icon_logo {
    display: block;
}

#sidebar .sidebar-list{
    padding: 15px 0;
}

#sidebar .sidebar-list.bottom{
    margin-top: auto;
    width: var(--sidebar-not-collapsed-width);
}

#sidebar.collapsed .sidebar-list.bottom{
    width: var(--sidebar-collapsed-width);
}

#sidebar .sidebar-list.separator-bottom{
    border-bottom: 1px solid rgba(217, 217, 217, 0.2);
}

#sidebar .sidebar-list .list-item{
    display: block;
    width: 100%;
    padding: 0 25px;
    white-space: nowrap;
    box-sizing: border-box;
    transition: all .3s;
    height: 40px;
    line-height: 40px;
    position: relative;
    cursor: pointer;
    border-left: 2px solid transparent;
}

#sidebar .list-item .item-counter{
    position: absolute;
    min-width: 23px;
    height: 16px;
    line-height: 16px;
    padding: 0 5px;
    text-align: center;
    border-radius: 30px;
    right: 13px;
    top: 7px;
    color: white;
    font-size: 11px;
    background-color: #EF8567;
}

#sidebar.collapsed .list-item .item-counter{
    overflow: hidden;
    min-width: auto;
    padding: 0;
    width: 6px;
    height: 6px;
    color: #EF8567;
    right: 23px;
    top: 5px;
}

#sidebar .sidebar-list .list-item.button{
    margin: 15px 8px 0 8px;
    width: calc(100% - 16px);
    padding-left: 20px;
    border: 1px solid;
}

#sidebar.collapsed .sidebar-list .list-item.button{
    padding-left: 25px;
}

#sidebar .sidebar-list .list-item.button .title{
    color: var(--button-secondary-color);
}

#sidebar .sidebar-list .list-item.button svg path{
    stroke: var(--button-secondary-color);
}

#sidebar .sidebar-list .list-item.current-module .title{
    color: white;
}

#sidebar .sidebar-list .list-item.current-module svg path{
    stroke: var(--secondary-color);
}

#sidebar .sidebar-list .list-item.active:not(.button){
    background-color: rgba(255, 255, 255, 0.08);
    border-left-color: var(--secondary-color);
}

#sidebar .sidebar-list .list-item.active .sidebar-submenu div{
    visibility: visible;
}

#sidebar .sidebar-list.small-items .list-item {
    height: 30px;
    line-height: 30px;
}

#sidebar.collapsed .sidebar-list .list-item {
    padding-left: 27px;
}

#sidebar .sidebar-list svg{
    display: inline-block;
    width: 14px;
    height: 14px;
    transition: all .3s;
}

#sidebar.collapsed .sidebar-list svg{
    margin-top: 8px;
    width: 20px;
    height: 20px;
}

#sidebar.collapsed .sidebar-list.small-items svg{
    margin-top: 3px;
}

#sidebar .sidebar-list .title{
    display: inline-block;
    pointer-events: all;
    opacity: 1;
    transition: all .3s;
    color: var(--sidebar-secondary-color);
    font-size: 14px;
    padding-left: 15px;
}

#sidebar.collapsed .sidebar-list .title{
    pointer-events: none;
    opacity: 0;
    width: 0;
}

#sidebar .sidebar-submenu div{
    visibility: hidden;
    border: 1px solid var(--sidebar-secondary-color);
    position: absolute;
    left: var(--sidebar-not-collapsed-width);
    top: 0;
    background: white;
    width: 200px;
    border-top-right-radius: 3px;
    border-bottom-right-radius: 3px;
    z-index: 951;
    overflow: auto;
    white-space: normal;
    text-overflow: ellipsis;
    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1), 0 0 2px rgba(0, 0, 0, 0.06);
    margin-bottom: 50px;
    margin-left: -2px;
}

#sidebar .sidebar-submenu:before{
    position: absolute;
    content: "";
    display: block;
    right: 10px;
    top: 10px;
    width: 20px;
    height: 20px;
    background-image: url('../images/dots.svg');
    background-repeat: no-repeat;
    background-position: center;
    transition: all .3s;
}

#sidebar .list-item.active .sidebar-submenu:before{
    transform: rotate(90deg);
    -webkit-transform: rotate(90deg);
    -moz-transform: rotate(90deg);
}

#sidebar.collapsed .list-item .sidebar-submenu:before{
    display: none;
}

#sidebar .sidebar-submenu a{
    display: inline-block;
    color: var(--grey);
    height: 40px;
    width: 100%;
    padding: 0 15px 0 15px;
}

#sidebar .sidebar-submenu a:hover{
    background-color: rgba(240, 240, 240, 0.5);
}

#sidebar .sidebar-submenu a:not(:last-child){
    border-bottom: 1px solid var(--sidebar-secondary-color);
}

#sidebar .sidebar-software-version{
    font-size: 9px;
    line-height: 12px;
    color: #FAFBFD;
    opacity: 0.3;
    position: absolute;
    padding: 0 25px;
    bottom: 8px;
    transition: all .3s;
}

#sidebar.collapsed .sidebar-software-version{
    padding: 0 10px;
    text-align: center;
}

#sidebar > a.logo-index > img.development {
    position: relative;
    top: -28px;
    width: 26px;
    height: 26px;
    border: none;
}

